Bug fix to tokenisze.

--- a/MiniMachine/MiniMachine.vcxproj
+++ b/MiniMachine/MiniMachine.vcxproj
@@ -146,6 +146,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="instruction.h" />
+    <ClInclude Include="instructionDecode.h" />
     <ClInclude Include="token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
