Trying to declare instruction set for all files to use.

--- a/MiniMachine/MiniMachine.vcxproj
+++ b/MiniMachine/MiniMachine.vcxproj
@@ -139,6 +139,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="instruction.c" />
     <ClCompile Include="instructionDecode.c" />
     <ClCompile Include="instructionExecute.c" />
     <ClCompile Include="instructionFetch.c" />
