--- a/MiniMachine/MiniMachine.vcxproj.filters
+++ b/MiniMachine/MiniMachine.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClCompile Include="memoryfile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="instruction.c">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="instruction.h">
