--- a/MiniMachine/MiniMachine.vcxproj.filters
+++ b/MiniMachine/MiniMachine.vcxproj.filters
@@ -33,12 +33,12 @@
     <ClCompile Include="memoryfile.c">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="instruction.c">
+    <ClCompile Include="instructiondata.c">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="instruction.h">
+    <ClInclude Include="instructiondata.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="token.h">
@@ -57,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="instructionFetch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="instructionset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
